bonus/confs/app_wil42.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground
  template:
    metadata:
      labels:
        app: playground
    spec:
      containers:
      - name: playground
        image: wil42/playground:v1
        ports:
        - containerPort: 8888

---

apiVersion: v1
kind: Service
metadata:
  name: playground-service
spec:
  selector:
    app: playground
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: NodePort

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    spec.ingressClassName: "traefik"
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: playground-service
              port:
                number: 8888
